ensure the x isn't overlapped on layer tools

--- a/src/app/frontend/assets/styles/modules/m-layer-tools.scss
+++ b/src/app/frontend/assets/styles/modules/m-layer-tools.scss
@@ -226,7 +226,7 @@
 
 .m-layer-tools .layer-components {
   position: relative;
-
+  width: 94%;
   .layer-component {
   }
 }
